--- a/index.html
+++ b/index.html
@@ -38,6 +38,34 @@ Use of Villo appliccable to the appropriate licenses
 	</head>
 	<body width=100% height=100% onload="loadGame()" style="z-index:100;">
 		<script>
+
+var elem = document.documentElement;
+	
+	/*if (!document.fullscreenElement && !document.mozFullScreenElement && !document.webkitFullscreenElement && !document.msFullscreenElement ) {*/
+		if (elem.requestFullscreen) {
+			elem.requestFullscreen();
+		} else if (elem.msRequestFullscreen) {
+			elem.msRequestFullscreen();
+		} else if (elem.mozRequestFullScreen) {
+			elem.mozRequestFullScreen();
+		} else if (elem.webkitRequestFullscreen) {
+			elem.webkitRequestFullscreen();
+		}
+	/*} else {
+		if (document.exitFullscreen) {
+			document.exitFullscreen();
+		} else if (document.msExitFullscreen) {
+			document.msExitFullscreen();
+		} else if (document.mozCancelFullScreen) {
+			document.mozCancelFullScreen();
+		} else if (document.webkitExitFullscreen) {
+			document.webkitExitFullscreen();
+		}
+	}*/
+
+
+
+
             if(deviceType == "iOS"){
                 console = new Object();
                 console.log = function(log) {
